# chip

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  c  c.sh  file.sh  research.md
.trunk/: trunk.yaml
docs/: chiplox.bnf  design.md  lang.md
src/: impl_mul_int.rs  lib.rs  main  main.rs
src/app/: mod.rs
src/app/chip/: mod.rs
src/app/keyboard/: mod.rs
src/app/screen/: mod.rs
src/lang/: mod.rs
src/lang/repl/: mod.rs  token.rs  tree.rs
src/lang/syntax/: mod.rs
src/lang/syntax/tree/: mod.rs
src/lang/syntax/trees/: leafs.rs  leaves.rs  mod.rs  pratt.example.rs
src/lang/tokenizer/: mod.rs
src/lang/tokens/: mod  mod.rs  use  use.rs
