[package]
name = "chip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# todo: split project into multiple crates

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] } # disable dynamic plugin before release
rand = "0.8.4"

[features]
