[package]
name = "chip-lox-ide"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# todo: split project into multiple crates

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] } # disable dynamic plugin before release
bevy_prototype_lyon = "0.4.0"
fraction = "0.10.0"
num-derive = "0.3.3"
num-rational = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.4"
rug = "1.15.0"

[features]

[profile.release]
debug = true
